--- a/Gene_Info.ipynb
+++ b/Gene_Info.ipynb
@@ -2,18 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import aql\n",
-    "conn = aql.Connection(\"http://arachne.compbio.ohsu.edu\")\n",
+    "conn = aql.Connection(\"http://bmeg.io\")\n",
     "O = conn.graph(\"bmeg\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -25,35 +25,25 @@
     }
    ],
    "source": [
-    "print list(O.query().V().where(aql.eq(\"$.label\", \"Gene\")).where(aql.contains(\"$.synonyms\", \"COSM12604\")))"
+    "print list(O.query().V().where(aql.eq(\"_label\", \"Gene\")).where(aql.eq(\"$.synonyms\", \"COSM12604\")))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[{u'vertex': {u'gid': u'gene:ENSG00000141510', u'data': {u'end': 7687550, u'description': u'tumor protein p53 [Source:HGNC Symbol%3BAcc:HGNC:11998]', u'symbol': u'TP53', u'start': 7661779, u'seqId': u'17', u'strand': u'-', u'id': u'ENSG00000141510', u'chromosome': u'17'}, u'label': u'Gene'}}]\n"
-     ]
-    }
-   ],
-   "source": [
-    "print list(O.query().V().where(aql.eq(\"$.label\", \"Gene\")).where(aql.eq(\"symbol\", \"TP53\")))"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[{u'data': {u'buckets': [{u'key': u'GO:0000122', u'value': 1},\n",
+       "[{u'agg': {u'buckets': [{u'key': u'GO:0000122', u'value': 1},\n",
        "    {u'key': u'GO:0000733', u'value': 1},\n",
        "    {u'key': u'GO:0000790', u'value': 1},\n",
        "    {u'key': u'GO:0000977', u'value': 1},\n",
@@ -180,17 +170,43 @@
        "    {u'key': u'GO:1902895', u'value': 1},\n",
        "    {u'key': u'GO:1990440', u'value': 1},\n",
        "    {u'key': u'GO:2000379', u'value': 1},\n",
-       "    {u'key': u'GO:2001244', u'value': 1}],\n",
-       "   u'name': u'agg'}}]"
+       "    {u'key': u'GO:2001244', u'value': 1}]}}]"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "list(O.query().V(\"gene:ENSG00000141510\").in_(\"annotationFor\").aggregate(aql.term(\"agg\", \"GeneOntologyTerm\", \"id\")))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{u'gid': u'gene:ENSG00000186092', u'data': {u'end': 71585, u'description': u'olfactory receptor family 4 subfamily F member 5 [Source:HGNC Symbol%3BAcc:HGNC:14825]', u'symbol': u'OR4F5', u'start': 65419, u'seqId': u'1', u'strand': u'+', u'id': u'ENSG00000186092', u'chromosome': u'1'}, u'label': u'Gene'}\n",
+      "{u'gid': u'gene:ENSG00000284733', u'data': {u'end': 451697, u'description': u'olfactory receptor family 4 subfamily F member 29 [Source:HGNC Symbol%3BAcc:HGNC:31275]', u'symbol': u'OR4F29', u'start': 450703, u'seqId': u'1', u'strand': u'-', u'id': u'ENSG00000284733', u'chromosome': u'1'}, u'label': u'Gene'}\n",
+      "{u'gid': u'gene:ENSG00000284662', u'data': {u'end': 686673, u'description': u'olfactory receptor family 4 subfamily F member 16 [Source:HGNC Symbol%3BAcc:HGNC:15079]', u'symbol': u'OR4F16', u'start': 685679, u'seqId': u'1', u'strand': u'-', u'id': u'ENSG00000284662', u'chromosome': u'1'}, u'label': u'Gene'}\n",
+      "{u'gid': u'gene:ENSG00000187634', u'data': {u'end': 944581, u'description': u'sterile alpha motif domain containing 11 [Source:HGNC Symbol%3BAcc:HGNC:28706]', u'symbol': u'SAMD11', u'start': 923928, u'seqId': u'1', u'strand': u'+', u'id': u'ENSG00000187634', u'chromosome': u'1'}, u'label': u'Gene'}\n",
+      "{u'gid': u'gene:ENSG00000188976', u'data': {u'end': 959309, u'description': u'NOC2 like nucleolar associated transcriptional repressor [Source:HGNC Symbol%3BAcc:HGNC:24517]', u'symbol': u'NOC2L', u'start': 944204, u'seqId': u'1', u'strand': u'-', u'id': u'ENSG00000188976', u'chromosome': u'1'}, u'label': u'Gene'}\n",
+      "{u'gid': u'gene:ENSG00000187961', u'data': {u'end': 965715, u'description': u'kelch like family member 17 [Source:HGNC Symbol%3BAcc:HGNC:24023]', u'symbol': u'KLHL17', u'start': 960587, u'seqId': u'1', u'strand': u'+', u'id': u'ENSG00000187961', u'chromosome': u'1'}, u'label': u'Gene'}\n",
+      "{u'gid': u'gene:ENSG00000187583', u'data': {u'end': 975865, u'description': u'pleckstrin homology domain containing N1 [Source:HGNC Symbol%3BAcc:HGNC:25284]', u'symbol': u'PLEKHN1', u'start': 966497, u'seqId': u'1', u'strand': u'+', u'id': u'ENSG00000187583', u'chromosome': u'1'}, u'label': u'Gene'}\n",
+      "{u'gid': u'gene:ENSG00000187642', u'data': {u'end': 982093, u'description': u'PPARGC1 and ESRR induced regulator%2C muscle 1 [Source:HGNC Symbol%3BAcc:HGNC:28208]', u'symbol': u'PERM1', u'start': 975204, u'seqId': u'1', u'strand': u'-', u'id': u'ENSG00000187642', u'chromosome': u'1'}, u'label': u'Gene'}\n",
+      "{u'gid': u'gene:ENSG00000188290', u'data': {u'end': 1000172, u'description': u'hes family bHLH transcription factor 4 [Source:HGNC Symbol%3BAcc:HGNC:24149]', u'symbol': u'HES4', u'start': 998962, u'seqId': u'1', u'strand': u'-', u'id': u'ENSG00000188290', u'chromosome': u'1'}, u'label': u'Gene'}\n",
+      "{u'gid': u'gene:ENSG00000187608', u'data': {u'end': 1014541, u'description': u'ISG15 ubiquitin-like modifier [Source:HGNC Symbol%3BAcc:HGNC:4053]', u'symbol': u'ISG15', u'start': 1001138, u'seqId': u'1', u'strand': u'+', u'id': u'ENSG00000187608', u'chromosome': u'1'}, u'label': u'Gene'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "for row in O.query().V().where(aql.eq(\"_label\", \"Gene\")).limit(10):\n",
+    "    print row"
    ]
   },
   {
