--- a/Genomics.ipynb
+++ b/Genomics.ipynb
@@ -41,7 +41,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[INFO]\t2019-02-21 16:38:46,239\t1 results received in 0 seconds\n"
+      "[INFO]\t2019-02-22 12:57:10,838\t1 results received in 0 seconds\n"
      ]
     },
     {
@@ -72,7 +72,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[INFO]\t2019-02-21 16:38:46,382\t1 results received in 0 seconds\n"
+      "[INFO]\t2019-02-22 12:57:10,992\t1 results received in 0 seconds\n"
      ]
     }
    ],
@@ -89,14 +89,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[INFO]\t2019-02-21 16:38:46,905\t1 results received in 0 seconds\n"
+      "[INFO]\t2019-02-22 12:57:11,467\t1 results received in 0 seconds\n"
      ]
     }
    ],
    "source": [
     "counts = [0] * (loc[1]-loc[0])\n",
     "q = O.query().V().hasLabel(\"Gene\").has(gripql.eq(\"symbol\", \"BRCA1\")).in_(\"AlleleIn\").has(gripql.eq(\"type\", \"SNP\"))\n",
-    "q = q.aggregate(gripql.term(\"brac1_pos\", \"start\", 1000))\n",
+    "q = q.aggregate(gripql.term(\"brac1_pos\", \"start\"))\n",
     "res = list(q)[0]\n",
     "for v in res.brac1_pos.buckets:\n",
     "    counts[ v['key'] - loc[0] ] = v['value']"
@@ -119,7 +119,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x11e90c588>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1191fd438>"
       ]
      },
      "execution_count": 7,
