--- a/Genomics.ipynb
+++ b/Genomics.ipynb
@@ -1,6 +1,23 @@
 {
  "cells": [
   {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "title: Gene Mutation Hotstops\n",
+    "authors:\n",
+    "- kellrott\n",
+    "tags:\n",
+    "- ccle\n",
+    "- drug response\n",
+    "created_at: 2018-05-09\n",
+    "updated_at: 2018-05-09\n",
+    "tldr: Build a rolling average of mutations for a given gene region\n",
+    "---"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -8,28 +25,33 @@
    "source": [
     "import matplotlib.pyplot as plt\n",
     "import pandas\n",
-    "import hashlib\n",
     "import gripql\n",
     "conn = gripql.Connection(\"http://grip.compbio.ohsu.edu\")\n",
     "O = conn.graph(\"bmeg_rc1_2\")"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Get BRCA1 start and stop locations"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[INFO]\t2019-03-05 10:40:46,821\t1 results received in 0 seconds\n"
+     ]
+    }
+   ],
    "source": [
-    "def allele_gid(genome, chromosome, start, end, reference_bases,\n",
-    "                 alternate_bases):\n",
-    "        vid = \"%s:%s:%d:%d:%s:%s\" % (genome, chromosome,\n",
-    "                                     start, end, reference_bases,\n",
-    "                                     alternate_bases)\n",
-    "        vid = vid.encode('utf-8')\n",
-    "        vidhash = hashlib.sha1()\n",
-    "        vidhash.update(vid)\n",
-    "        vidhash = vidhash.hexdigest()\n",
-    "        return \"Allele:%s\" % (vidhash)\n"
+    "loc = list( O.query().V().hasLabel(\"Gene\").has(gripql.eq(\"symbol\", \"BRCA1\")).render([\"$.start\", \"$.end\"]) )[0]"
    ]
   },
   {
@@ -41,55 +63,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[INFO]\t2019-02-22 12:57:10,838\t1 results received in 0 seconds\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<AttrDict({'gid': 'Allele:0b0a7a23d57414e768677a6cbd764563922209df', 'label': 'Allele', 'data': {'alternate_bases': 'T', 'chromosome': '1', 'effect': 'Nonsense_Mutation', 'end': 27100988, 'ensembl_transcript': 'ENST00000324856', 'genome': 'GRCh37', 'hugo_symbol': 'ARID1A', 'reference_bases': 'C', 'start': 27100988, 'strand': '+', 'type': 'SNP'}})>\n"
-     ]
-    }
-   ],
-   "source": [
-    "chrom = 1\n",
-    "loc = 27100988\n",
-    "ids = []\n",
-    "for r in ['A', 'C', 'G', 'T']:\n",
-    "    for a in ['A', 'C', 'G', 'T']:\n",
-    "        ids.append( allele_gid(\"GRCh37\", chrom, loc, loc, r, a) )\n",
-    "for row in O.query().V(ids):\n",
-    "    print( row )"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[INFO]\t2019-02-22 12:57:10,992\t1 results received in 0 seconds\n"
-     ]
-    }
-   ],
-   "source": [
-    "loc = list( O.query().V().hasLabel(\"Gene\").has(gripql.eq(\"symbol\", \"BRCA1\")).render([\"$.start\", \"$.end\"]) )[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[INFO]\t2019-02-22 12:57:11,467\t1 results received in 0 seconds\n"
+      "[INFO]\t2019-03-05 10:40:51,743\t1 results received in 4 seconds\n"
      ]
     }
    ],
@@ -104,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,16 +87,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1191fd438>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x11e6e10f0>"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -167,7 +141,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.7.2"
   }
  },
  "nbformat": 4,
