--- a/Gene_Info.ipynb
+++ b/Gene_Info.ipynb
@@ -20,25 +20,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import gripql\n",
-    "conn = gripql.Connection(\"http://grip.compbio.ohsu.edu\")\n",
+    "conn = gripql.Connection(\"https://bmeg.io/api\", credential_file=\"/tmp/bmeg_credentials.json\")\n",
     "O = conn.graph(\"bmeg_rc1_2\")"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Look up a gene by its hugo symbol"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[INFO]\t2019-03-05 10:28:54,005\t1 results received in 0 seconds\n"
+      "[INFO]\t2019-03-11 15:49:09,362\t1 results received in 0 seconds\n"
      ]
     }
    ],
@@ -47,109 +54,44 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Find some of the Gene Ontology terms the gene is linked to"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[INFO]\t2019-03-05 10:36:09,776\t82 results received in 0 seconds\n"
+      "[INFO]\t2019-03-11 16:32:55,385\t10 results received in 0 seconds\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<AttrDict({'evidence': 'IDA', 'references': ['PMID:19117993'], 'title': 'Breast cancer type 1 susceptibility protein'})>\n",
-      "<AttrDict({'evidence': 'IPI', 'references': ['PMID:19369211'], 'title': 'Breast cancer type 1 susceptibility protein'})>\n",
-      "<AttrDict({'evidence': 'TAS', 'references': ['PMID:9662397'], 'title': 'Breast cancer type 1 susceptibility protein'})>\n",
-      "<AttrDict({'evidence': 'TAS', 'references': [], 'title': 'Breast cancer type 1 susceptibility protein'})>\n",
-      "<AttrDict({'evidence': 'ISS', 'references': ['GO_REF:0000024'], 'title': 'Breast cancer type 1 susceptibility protein'})>\n",
-      "<AttrDict({'evidence': 'IDA', 'references': ['PMID:20160719'], 'title': 'Breast cancer type 1 susceptibility protein'})>\n",
-      "<AttrDict({'evidence': 'IDA', 'references': ['PMID:21282464'], 'title': 'Breast cancer type 1 susceptibility protein'})>\n",
-      "<AttrDict({'evidence': 'TAS', 'references': [], 'title': 'Breast cancer type 1 susceptibility protein'})>\n",
-      "<AttrDict({'evidence': 'IDA', 'references': ['PMID:17349954'], 'title': 'Breast cancer type 1 susceptibility protein'})>\n",
-      "<AttrDict({'evidence': 'IMP', 'references': ['PMID:17525340'], 'title': 'Breast cancer type 1 susceptibility protein'})>\n",
-      "<AttrDict({'evidence': 'TAS', 'references': [], 'title': 'Breast cancer type 1 susceptibility protein'})>\n",
-      "<AttrDict({'evidence': 'IPI', 'references': ['PMID:29656893'], 'title': 'Breast cancer type 1 susceptibility protein'})>\n",
-      "<AttrDict({'evidence': 'TAS', 'references': ['PMID:10918303'], 'title': 'Breast cancer type 1 susceptibility protein'})>\n",
-      "<AttrDict({'evidence': 'IDA', 'references': ['PMID:9774970'], 'title': 'Breast cancer type 1 susceptibility protein'})>\n",
-      "<AttrDict({'evidence': 'IEA', 'references': ['GO_REF:0000107'], 'title': 'Breast cancer type 1 susceptibility protein'})>\n",
-      "<AttrDict({'evidence': 'IMP', 'references': ['PMID:16326698'], 'title': 'Breast cancer type 1 susceptibility protein'})>\n",
-      "<AttrDict({'evidence': 'IDA', 'references': ['PMID:21102443'], 'title': 'Breast cancer type 1 susceptibility protein'})>\n",
-      "<AttrDict({'evidence': 'IDA', 'references': ['PMID:12890688'], 'title': 'Breast cancer type 1 susceptibility protein'})>\n",
-      "<AttrDict({'evidence': 'IDA', 'references': ['PMID:17349954'], 'title': 'Breast cancer type 1 susceptibility protein'})>\n",
-      "<AttrDict({'evidence': 'NAS', 'references': ['PMID:15572661'], 'title': 'Breast cancer type 1 susceptibility protein'})>\n",
-      "<AttrDict({'evidence': 'IDA', 'references': ['PMID:12419249'], 'title': 'Breast cancer type 1 susceptibility protein'})>\n",
-      "<AttrDict({'evidence': 'TAS', 'references': [], 'title': 'Breast cancer type 1 susceptibility protein'})>\n",
-      "<AttrDict({'evidence': 'IDA', 'references': ['PMID:9774970'], 'title': 'Breast cancer type 1 susceptibility protein'})>\n",
-      "<AttrDict({'evidence': 'IEA', 'references': ['GO_REF:0000107'], 'title': 'Breast cancer type 1 susceptibility protein'})>\n",
-      "<AttrDict({'evidence': 'IMP', 'references': ['PMID:17643121'], 'title': 'Breast cancer type 1 susceptibility protein'})>\n",
-      "<AttrDict({'evidence': 'IDA', 'references': ['PMID:14654789'], 'title': 'Breast cancer type 1 susceptibility protein'})>\n",
-      "<AttrDict({'evidence': 'IMP', 'references': ['PMID:23415688'], 'title': 'Breast cancer type 1 susceptibility protein'})>\n",
-      "<AttrDict({'evidence': 'IMP', 'references': ['PMID:23415688'], 'title': 'Breast cancer type 1 susceptibility protein'})>\n",
-      "<AttrDict({'evidence': 'IPI', 'references': ['PMID:15965487'], 'title': 'Breast cancer type 1 susceptibility protein'})>\n",
-      "<AttrDict({'evidence': 'IDA', 'references': ['PMID:15965487'], 'title': 'Breast cancer type 1 susceptibility protein'})>\n",
-      "<AttrDict({'evidence': 'IDA', 'references': ['PMID:15265711'], 'title': 'Breast cancer type 1 susceptibility protein'})>\n",
-      "<AttrDict({'evidence': 'IMP', 'references': ['PMID:15965487'], 'title': 'Breast cancer type 1 susceptibility protein'})>\n",
-      "<AttrDict({'evidence': 'TAS', 'references': ['PMID:10918303'], 'title': 'Breast cancer type 1 susceptibility protein'})>\n",
-      "<AttrDict({'evidence': 'IDA', 'references': ['PMID:20820192'], 'title': 'Breast cancer type 1 susceptibility protein'})>\n",
-      "<AttrDict({'evidence': 'IEA', 'references': ['GO_REF:0000107'], 'title': 'Breast cancer type 1 susceptibility protein'})>\n",
-      "<AttrDict({'evidence': 'IDA', 'references': ['PMID:20820192'], 'title': 'Breast cancer type 1 susceptibility protein'})>\n",
-      "<AttrDict({'evidence': 'IEA', 'references': ['GO_REF:0000107'], 'title': 'Breast cancer type 1 susceptibility protein'})>\n",
-      "<AttrDict({'evidence': 'IMP', 'references': ['PMID:23415688'], 'title': 'Breast cancer type 1 susceptibility protein'})>\n",
-      "<AttrDict({'evidence': 'IDA', 'references': ['PMID:12890688'], 'title': 'Breast cancer type 1 susceptibility protein'})>\n",
-      "<AttrDict({'evidence': 'IMP', 'references': ['PMID:19261748'], 'title': 'Breast cancer type 1 susceptibility protein'})>\n",
-      "<AttrDict({'evidence': 'TAS', 'references': [], 'title': 'Breast cancer type 1 susceptibility protein'})>\n",
-      "<AttrDict({'evidence': 'IDA', 'references': ['PMID:16288014'], 'title': 'Breast cancer type 1 susceptibility protein'})>\n",
-      "<AttrDict({'evidence': 'IDA', 'references': ['PMID:20820192'], 'title': 'Breast cancer type 1 susceptibility protein'})>\n",
-      "<AttrDict({'evidence': 'TAS', 'references': ['PMID:10918303'], 'title': 'Breast cancer type 1 susceptibility protein'})>\n",
-      "<AttrDict({'evidence': 'IDA', 'references': ['PMID:17643121'], 'title': 'Breast cancer type 1 susceptibility protein'})>\n",
-      "<AttrDict({'evidence': 'IDA', 'references': ['PMID:17525340'], 'title': 'Breast cancer type 1 susceptibility protein'})>\n",
-      "<AttrDict({'evidence': 'IMP', 'references': ['PMID:23415688'], 'title': 'Breast cancer type 1 susceptibility protein'})>\n",
-      "<AttrDict({'evidence': 'IPI', 'references': ['PMID:17873885'], 'title': 'Breast cancer type 1 susceptibility protein'})>\n",
-      "<AttrDict({'evidence': 'IEA', 'references': ['GO_REF:0000107'], 'title': 'Breast cancer type 1 susceptibility protein'})>\n",
-      "<AttrDict({'evidence': 'IDA', 'references': ['PMID:17349954'], 'title': 'Breast cancer type 1 susceptibility protein'})>\n",
-      "<AttrDict({'evidence': 'NAS', 'references': ['PMID:15572661'], 'title': 'Breast cancer type 1 susceptibility protein'})>\n",
-      "<AttrDict({'evidence': 'IDA', 'references': ['PMID:16331276'], 'title': 'Breast cancer type 1 susceptibility protein'})>\n",
-      "<AttrDict({'evidence': 'IEA', 'references': ['GO_REF:0000002'], 'title': 'Breast cancer type 1 susceptibility protein'})>\n",
-      "<AttrDict({'evidence': 'IEA', 'references': ['GO_REF:0000107'], 'title': 'Breast cancer type 1 susceptibility protein'})>\n",
-      "<AttrDict({'evidence': 'IDA', 'references': ['PMID:8895509'], 'title': 'Breast cancer type 1 susceptibility protein'})>\n",
-      "<AttrDict({'evidence': 'NAS', 'references': ['PMID:12214252'], 'title': 'Breast cancer type 1 susceptibility protein'})>\n",
-      "<AttrDict({'evidence': 'IDA', 'references': ['PMID:20820192'], 'title': 'Breast cancer type 1 susceptibility protein'})>\n",
-      "<AttrDict({'evidence': 'IEA', 'references': ['GO_REF:0000107'], 'title': 'Breast cancer type 1 susceptibility protein'})>\n",
-      "<AttrDict({'evidence': 'IDA', 'references': ['PMID:20820192'], 'title': 'Breast cancer type 1 susceptibility protein'})>\n",
-      "<AttrDict({'evidence': 'NAS', 'references': ['PMID:12214252'], 'title': 'Breast cancer type 1 susceptibility protein'})>\n",
-      "<AttrDict({'evidence': 'IDA', 'references': ['PMID:20820192'], 'title': 'Breast cancer type 1 susceptibility protein'})>\n",
-      "<AttrDict({'evidence': 'IDA', 'references': ['PMID:20820192'], 'title': 'Breast cancer type 1 susceptibility protein'})>\n",
-      "<AttrDict({'evidence': 'IDA', 'references': ['PMID:18809582'], 'title': 'Breast cancer type 1 susceptibility protein'})>\n",
-      "<AttrDict({'evidence': 'IMP', 'references': ['PMID:9662397'], 'title': 'Breast cancer type 1 susceptibility protein'})>\n",
-      "<AttrDict({'evidence': 'TAS', 'references': ['PMID:10918303'], 'title': 'Breast cancer type 1 susceptibility protein'})>\n",
-      "<AttrDict({'evidence': 'IEA', 'references': ['GO_REF:0000037'], 'title': 'Breast cancer type 1 susceptibility protein'})>\n",
-      "<AttrDict({'evidence': 'TAS', 'references': ['PMID:10918303'], 'title': 'Breast cancer type 1 susceptibility protein'})>\n",
-      "<AttrDict({'evidence': 'TAS', 'references': ['PMID:10910365'], 'title': 'Breast cancer type 1 susceptibility protein'})>\n",
-      "<AttrDict({'evidence': 'TAS', 'references': ['PMID:10918303'], 'title': 'Breast cancer type 1 susceptibility protein'})>\n",
-      "<AttrDict({'evidence': 'IMP', 'references': ['PMID:17505062'], 'title': 'Breast cancer type 1 susceptibility protein'})>\n",
-      "<AttrDict({'evidence': 'IMP', 'references': ['PMID:23415688'], 'title': 'Breast cancer type 1 susceptibility protein'})>\n",
-      "<AttrDict({'evidence': 'IDA', 'references': ['PMID:9662397'], 'title': 'Breast cancer type 1 susceptibility protein'})>\n",
-      "<AttrDict({'evidence': 'NAS', 'references': ['PMID:15572661'], 'title': 'Breast cancer type 1 susceptibility protein'})>\n",
-      "<AttrDict({'evidence': 'IMP', 'references': ['PMID:19261748'], 'title': 'Breast cancer type 1 susceptibility protein'})>\n",
-      "<AttrDict({'evidence': 'IMP', 'references': ['PMID:23415688'], 'title': 'Breast cancer type 1 susceptibility protein'})>\n",
-      "<AttrDict({'evidence': 'IDA', 'references': ['PMID:10868478'], 'title': 'Breast cancer type 1 susceptibility protein'})>\n",
-      "<AttrDict({'evidence': 'NAS', 'references': ['PMID:14976165'], 'title': 'Breast cancer type 1 susceptibility protein'})>\n",
-      "<AttrDict({'evidence': 'NAS', 'references': ['PMID:12214252'], 'title': 'Breast cancer type 1 susceptibility protein'})>\n",
-      "<AttrDict({'evidence': 'TAS', 'references': [], 'title': 'Breast cancer type 1 susceptibility protein'})>\n",
-      "<AttrDict({'evidence': 'IBA', 'references': ['PMID:21873635'], 'title': 'Breast cancer type 1 susceptibility protein'})>\n",
-      "<AttrDict({'evidence': 'IBA', 'references': ['PMID:21873635'], 'title': 'Breast cancer type 1 susceptibility protein'})>\n",
-      "<AttrDict({'evidence': 'IBA', 'references': ['PMID:21873635'], 'title': 'Breast cancer type 1 susceptibility protein'})>\n"
+      "GO:0005515 <AttrDict({'definition': 'Interacting selectively and non-covalently with any protein or protein complex (a complex of two or more proteins that may include other nonprotein molecules).', 'go_id': 'GO:0005515', 'name': 'protein binding', 'namespace': 'molecular_function', 'synonym': ['glycoprotein binding', 'protein amino acid binding'], 'xref': ['reactome:R-HSA-170835', 'reactome:R-HSA-170846', 'reactome:R-HSA-3645786', 'reactome:R-HSA-3656484', 'reactome:R-HSA-3702153', 'reactome:R-HSA-3713560']})>\n",
+      "GO:0005654 <AttrDict({'definition': 'That part of the nuclear content other than the chromosomes or the nucleolus.', 'go_id': 'GO:0005654', 'name': 'nucleoplasm', 'namespace': 'cellular_component', 'synonym': [], 'xref': ['NIF_Subcellular:sao661522542', 'Wikipedia:Nucleoplasm']})>\n",
+      "GO:0005737 <AttrDict({'definition': 'All of the contents of a cell excluding the plasma membrane and nucleus, but including other subcellular structures.', 'go_id': 'GO:0005737', 'name': 'cytoplasm', 'namespace': 'cellular_component', 'synonym': [], 'xref': ['Wikipedia:Cytoplasm']})>\n",
+      "GO:0006359 <AttrDict({'definition': 'Any process that modulates the frequency, rate or extent of transcription mediated by RNA ploymerase III.', 'go_id': 'GO:0006359', 'name': 'regulation of transcription by RNA polymerase III', 'namespace': 'biological_process', 'synonym': ['regulation of transcription from Pol III promoter', 'regulation of transcription from RNA polymerase III promoter'], 'xref': []})>\n",
+      "GO:0008630 <AttrDict({'definition': 'A series of molecular signals in which an intracellular signal is conveyed to trigger the apoptotic death of a cell. The pathway is induced by the detection of DNA damage, and ends when the execution phase of apoptosis is triggered.', 'go_id': 'GO:0008630', 'name': 'intrinsic apoptotic signaling pathway in response to DNA damage', 'namespace': 'biological_process', 'synonym': ['DNA damage response, signal transduction resulting in induction of apoptosis'], 'xref': []})>\n",
+      "GO:0031436 <AttrDict({'definition': 'A heterodimeric complex comprising BRCA1 and BARD1, which possesses ubiquitin ligase activity and is involved in genome maintenance, possibly by functioning in surveillance for DNA damage.', 'go_id': 'GO:0031436', 'name': 'BRCA1-BARD1 complex', 'namespace': 'cellular_component', 'synonym': [], 'xref': []})>\n",
+      "GO:0019899 <AttrDict({'definition': 'Interacting selectively and non-covalently with any enzyme.', 'go_id': 'GO:0019899', 'name': 'enzyme binding', 'namespace': 'molecular_function', 'synonym': [], 'xref': []})>\n",
+      "GO:0044212 <AttrDict({'definition': 'Interacting selectively and non-covalently with a DNA region that regulates the transcription of a region of DNA, which may be a gene, cistron, or operon. Binding may occur as a sequence specific interaction or as an interaction observed only once a factor has been recruited to the DNA by other factors.', 'go_id': 'GO:0044212', 'name': 'transcription regulatory region DNA binding', 'namespace': 'molecular_function', 'synonym': ['regulatory region DNA binding'], 'xref': []})>\n",
+      "GO:0050681 <AttrDict({'definition': 'Interacting selectively and non-covalently with an androgen receptor.', 'go_id': 'GO:0050681', 'name': 'androgen receptor binding', 'namespace': 'molecular_function', 'synonym': ['AR binding'], 'xref': []})>\n",
+      "GO:0051573 <AttrDict({'definition': 'Any process that stops, prevents, or reduces the frequency, rate or extent of the covalent addition of a methyl group to the lysine at position 9 of histone H3.', 'go_id': 'GO:0051573', 'name': 'negative regulation of histone H3-K9 methylation', 'namespace': 'biological_process', 'synonym': ['down regulation of histone H3-K9 methylation', 'down-regulation of histone H3-K9 methylation', 'downregulation of histone H3-K9 methylation', 'inhibition of histone H3-K9 methylation'], 'xref': []})>\n"
      ]
     }
    ],
    "source": [
-    "for ent in O.query().V(gids).inE(\"GeneOntologyAnnotation\"):\n",
-    "    print(ent.data)"
+    "for ent in O.query().V(gids).in_(\"GeneOntologyAnnotation\").limit(10):\n",
+    "    print(ent.gid, ent.data)"
    ]
   },
   {
