--- a/Gene_Info.ipynb
+++ b/Gene_Info.ipynb
@@ -25,8 +25,8 @@
    "outputs": [],
    "source": [
     "import gripql\n",
-    "conn = gripql.Connection(\"https://bmeg.io/api\", credential_file=\"/tmp/bmeg_credentials.json\")\n",
-    "O = conn.graph(\"bmeg_rc1_2\")"
+    "conn = gripql.Connection(\"https://bmeg.io/api\", credential_file=\"bmeg_credentials.json\")\n",
+    "O = conn.graph(\"bmeg_rc2\")"
    ]
   },
   {
@@ -45,7 +45,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[INFO]\t2019-03-11 15:49:09,362\t1 results received in 0 seconds\n"
+      "[INFO]\t2019-07-26 20:44:57,342\t1 results received in 0 seconds\n"
      ]
     }
    ],
@@ -62,36 +62,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[INFO]\t2019-03-11 16:32:55,385\t10 results received in 0 seconds\n"
+      "[INFO]\t2019-07-26 20:46:07,469\t10 results received in 0 seconds\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "GO:0005515 <AttrDict({'definition': 'Interacting selectively and non-covalently with any protein or protein complex (a complex of two or more proteins that may include other nonprotein molecules).', 'go_id': 'GO:0005515', 'name': 'protein binding', 'namespace': 'molecular_function', 'synonym': ['glycoprotein binding', 'protein amino acid binding'], 'xref': ['reactome:R-HSA-170835', 'reactome:R-HSA-170846', 'reactome:R-HSA-3645786', 'reactome:R-HSA-3656484', 'reactome:R-HSA-3702153', 'reactome:R-HSA-3713560']})>\n",
-      "GO:0005654 <AttrDict({'definition': 'That part of the nuclear content other than the chromosomes or the nucleolus.', 'go_id': 'GO:0005654', 'name': 'nucleoplasm', 'namespace': 'cellular_component', 'synonym': [], 'xref': ['NIF_Subcellular:sao661522542', 'Wikipedia:Nucleoplasm']})>\n",
-      "GO:0005737 <AttrDict({'definition': 'All of the contents of a cell excluding the plasma membrane and nucleus, but including other subcellular structures.', 'go_id': 'GO:0005737', 'name': 'cytoplasm', 'namespace': 'cellular_component', 'synonym': [], 'xref': ['Wikipedia:Cytoplasm']})>\n",
-      "GO:0006359 <AttrDict({'definition': 'Any process that modulates the frequency, rate or extent of transcription mediated by RNA ploymerase III.', 'go_id': 'GO:0006359', 'name': 'regulation of transcription by RNA polymerase III', 'namespace': 'biological_process', 'synonym': ['regulation of transcription from Pol III promoter', 'regulation of transcription from RNA polymerase III promoter'], 'xref': []})>\n",
-      "GO:0008630 <AttrDict({'definition': 'A series of molecular signals in which an intracellular signal is conveyed to trigger the apoptotic death of a cell. The pathway is induced by the detection of DNA damage, and ends when the execution phase of apoptosis is triggered.', 'go_id': 'GO:0008630', 'name': 'intrinsic apoptotic signaling pathway in response to DNA damage', 'namespace': 'biological_process', 'synonym': ['DNA damage response, signal transduction resulting in induction of apoptosis'], 'xref': []})>\n",
-      "GO:0031436 <AttrDict({'definition': 'A heterodimeric complex comprising BRCA1 and BARD1, which possesses ubiquitin ligase activity and is involved in genome maintenance, possibly by functioning in surveillance for DNA damage.', 'go_id': 'GO:0031436', 'name': 'BRCA1-BARD1 complex', 'namespace': 'cellular_component', 'synonym': [], 'xref': []})>\n",
-      "GO:0019899 <AttrDict({'definition': 'Interacting selectively and non-covalently with any enzyme.', 'go_id': 'GO:0019899', 'name': 'enzyme binding', 'namespace': 'molecular_function', 'synonym': [], 'xref': []})>\n",
-      "GO:0044212 <AttrDict({'definition': 'Interacting selectively and non-covalently with a DNA region that regulates the transcription of a region of DNA, which may be a gene, cistron, or operon. Binding may occur as a sequence specific interaction or as an interaction observed only once a factor has been recruited to the DNA by other factors.', 'go_id': 'GO:0044212', 'name': 'transcription regulatory region DNA binding', 'namespace': 'molecular_function', 'synonym': ['regulatory region DNA binding'], 'xref': []})>\n",
-      "GO:0050681 <AttrDict({'definition': 'Interacting selectively and non-covalently with an androgen receptor.', 'go_id': 'GO:0050681', 'name': 'androgen receptor binding', 'namespace': 'molecular_function', 'synonym': ['AR binding'], 'xref': []})>\n",
-      "GO:0051573 <AttrDict({'definition': 'Any process that stops, prevents, or reduces the frequency, rate or extent of the covalent addition of a methyl group to the lysine at position 9 of histone H3.', 'go_id': 'GO:0051573', 'name': 'negative regulation of histone H3-K9 methylation', 'namespace': 'biological_process', 'synonym': ['down regulation of histone H3-K9 methylation', 'down-regulation of histone H3-K9 methylation', 'downregulation of histone H3-K9 methylation', 'inhibition of histone H3-K9 methylation'], 'xref': []})>\n"
+      "GeneOntologyTerm:GO:0003684 Interacting selectively and non-covalently with damaged DNA.\n",
+      "GeneOntologyTerm:GO:0004842 Catalysis of the transfer of ubiquitin from one protein to another via the reaction X-Ub + Y --> Y-Ub + X, where both X-Ub and Y-Ub are covalent linkages.\n",
+      "GeneOntologyTerm:GO:0000151 A protein complex that includes a ubiquitin-protein ligase and enables ubiquitin protein ligase activity. The complex also contains other proteins that may confer substrate specificity on the complex.\n",
+      "GeneOntologyTerm:GO:0000729 The 5' to 3' exonucleolytic resection of the DNA at the site of the break to form a 3' single-strand DNA overhang.\n",
+      "GeneOntologyTerm:GO:0000724 The error-free repair of a double-strand break in DNA in which the broken DNA molecule is repaired using homologous sequences. A strand in the broken DNA searches for a homologous region in an intact chromosome to serve as the template for DNA synthesis. The restoration of two intact DNA molecules results in the exchange, reciprocal or nonreciprocal, of genetic material between the intact DNA molecule and the broken DNA molecule.\n",
+      "GeneOntologyTerm:GO:0003713 A protein or a member of a complex that interacts specifically and non-covalently with a DNA-bound DNA-binding transcription factor to activate the transcription of specific genes. Coactivators often act by altering chromatin structure and modifications. For example, one class of transcription coregulators modifies chromatin structure through covalent modification of histones. A second ATP-dependent class modifies the conformation of chromatin. Another type of coregulator activity is the bridging of a DNA-binding transcription factor to the basal transcription machinery. The Mediator complex, which bridges transcription factors and RNA polymerase, is also a transcription coactivator.\n",
+      "GeneOntologyTerm:GO:0000800 A proteinaceous core found between sister chromatids during meiotic prophase.\n",
+      "GeneOntologyTerm:GO:0005515 Interacting selectively and non-covalently with any protein or protein complex (a complex of two or more proteins that may include other nonprotein molecules).\n",
+      "GeneOntologyTerm:GO:0003677 Any molecular function by which a gene product interacts selectively and non-covalently with DNA (deoxyribonucleic acid).\n",
+      "GeneOntologyTerm:GO:0003723 Interacting selectively and non-covalently with an RNA molecule or a portion thereof.\n"
      ]
     }
    ],
    "source": [
-    "for ent in O.query().V(gids).in_(\"GeneOntologyAnnotation\").limit(10):\n",
-    "    print(ent.gid, ent.data)"
+    "for ent in O.query().V(gids).out(\"gene_ontology_terms\").limit(10):\n",
+    "    print(ent.gid, ent.data.definition)"
    ]
   },
   {
@@ -118,7 +118,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
