--- a/Genomics.ipynb
+++ b/Genomics.ipynb
@@ -6,6 +6,7 @@
    "source": [
     "---\n",
     "title: Gene Mutation Hotstops\n",
+    "weight: 63\n",
     "authors:\n",
     "- kellrott\n",
     "tags:\n",
@@ -15,6 +16,13 @@
     "updated_at: 2018-05-09\n",
     "tldr: Build a rolling average of mutations for a given gene region\n",
     "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "For this example, we will start from a single gene, and identify all mutations that occur on it. "
    ]
   },
   {
@@ -34,7 +42,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Get BRCA1 start and stop locations"
+    "Get BRCA1 start and stop locations"
    ]
   },
   {
@@ -52,6 +60,13 @@
    ],
    "source": [
     "loc = list( O.query().V().hasLabel(\"Gene\").has(gripql.eq(\"symbol\", \"BRCA1\")).render([\"$.start\", \"$.end\"]) )[0]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Run an aggregation query to count up all the mutations"
    ]
   },
   {
@@ -77,12 +92,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Save as a dataframe"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "s = pandas.DataFrame(counts)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Plot the hotspots"
    ]
   },
   {
@@ -116,13 +145,6 @@
    "source": [
     "s.rolling(500).sum().plot()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -141,7 +163,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.2"
   }
  },
  "nbformat": 4,
